--- a/hw510_4.Rmd
+++ b/hw510_4.Rmd
@@ -16,7 +16,7 @@ x
 ```{r}
 #question 1c
 #give a matrix from 1:20 and 20 :1 to x
-x<-c(1:20,20:1)
+x<-c(1:20,19:1)
 x
 ```
 
@@ -153,7 +153,7 @@ yVec[yVec>600]
 ```{r}
 #question 7b
 #	find index	positions	in	yVec	of	the	values	which	are	>	600 by match #function
-match(yVec[yVec>600],yVec)
+(1:250)[yVec>600]
 ```
 
 ```{r}
